[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "candid_cash"
version = "23.10.0b4"
authors = [
  { name = "Wayne Werner", email = "wayne@waynewerner.com" },
]
keywords = ["money", "finance", "budget", "productivity"]
license = { file = "LICENSE.txt" }
description = "Tool for budgeting/tracking finances."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Intended Audience :: End Users/Desktop",
]

[project.scripts]
easy-money = "easy_money:do_it"
